# annin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  issues.md  pyproject.toml  reminders.md  todo.md  vercorr_install.sh
TeX/: nested.tex  test_abstract.tex  test_footnote.tex  verysimplesource.tex
TeX/arxiv0/: arxiv0.tex  arxiv0.toc
TeX/arxiv1/: arxiv1.tex
TeX/arxiv10/: arxiv10.tex
TeX/arxiv11/: COVID.bbl  arxiv11.tex
TeX/arxiv12/: New_spin_7__metrics.bbl  arxiv12.tex
TeX/arxiv13/: arxiv13.tex
TeX/arxiv14/: arxiv14.tex
TeX/arxiv15/: arxiv15.tex
TeX/arxiv2/: arxiv2.toc
TeX/arxiv4/: arxiv4.bbl  arxiv4.blg  arxiv4.tex  arxiv4.toc  macros.tex
TeX/arxiv5/: arxiv5.bbl  arxiv5.blg  arxiv5.tex  arxiv5.toc
TeX/arxiv6/: arxiv6.tex
TeX/arxiv8/: arxiv8.tex
TeX/arxiv9/: arxiv9.tex
notes/: about.md  callingLLMs.md  enhancements.md  largest_substring.py  module_musings.md  todo.md
src/texpdfedits/: cformats.py  cli.py  comment_corr.py  commentcorr.py  corr.py  enhancements.md  extract.py  extract_anns.py  extractanns.py  formatcomm.py  inlinecorr.py  junk.py  main.py  mark_tex.py  marktex.py  modify.py  modifytex.py  notes.md  prompt.py  prompt_improvement.md  segmentsource.py  segsource_failures.md  svn.py  sync.py  system_prompt.md  todo.md  utils.py
tests/: .gitignore  light_prompt.md  old_syst_prompt.md  syst_prompt.md  test_extract.py  test_marktex.py  test_prompt.py  test_segment.py
tests/TeX_comment_corr_out/: arxiv1_autocorrected.tex
tests/artifacts/: arxiv13_autocorrected.tex  arxiv1_autocorrected.tex  arxiv1_inlined.tex  (+2 more)
(+75 files in other folders)
